// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MpxText Component Tests handles text truncation 1`] = `
<span
  allowFontScaling={false}
  ellipsizeMode="middle"
  numberOfLines={2}
  selectable={false}
  style={
    {
      "width": 100,
    }
  }
>
  这是一段需要截断的很长很长的文本内容
</span>
`;

exports[`MpxText Component Tests renders mpx-text with snapshot 1`] = `
<span
  allowFontScaling={false}
  selectable={false}
  style={
    {
      "color": "#333",
      "fontSize": 16,
    }
  }
  testID="test-text"
>
  Hello MPX Text
</span>
`;

exports[`MpxText Component Tests renders multiline text with snapshot 1`] = `
<span
  allowFontScaling={false}
  ellipsizeMode="tail"
  numberOfLines={3}
  selectable={false}
  style={
    {
      "fontSize": 14,
      "lineHeight": 20,
    }
  }
  testID="multiline-text"
>
  这是一段很长的文本内容，用来测试多行文本的显示效果。 这段文本会被限制在3行内显示，超出的部分会用省略号表示。 测试文本换行和省略号的处理逻辑。
</span>
`;

exports[`MpxText Component Tests renders nested text with snapshot 1`] = `
<span
  allowFontScaling={false}
  selectable={false}
  style={
    {
      "fontSize": 16,
    }
  }
  testID="nested-text"
>
  这是父级文本，
  <span
    allowFontScaling={false}
    selectable={false}
    style={
      {
        "color": "red",
        "fontWeight": "bold",
      }
    }
  >
    这是嵌套的粗体红色文本
  </span>
  ，回到正常文本。
</span>
`;

exports[`MpxText Component Tests renders selectable text with snapshot 1`] = `
<span
  allowFontScaling={false}
  selectable={true}
  style={
    {
      "fontSize": 14,
      "padding": 10,
    }
  }
  testID="selectable-text"
>
  这是可选择的文本内容，用户可以选择和复制这段文字。
</span>
`;

exports[`MpxText Component Tests renders styled text with snapshot 1`] = `
<span
  allowFontScaling={false}
  selectable={false}
  style={
    {
      "color": "#007AFF",
      "fontSize": 18,
      "fontWeight": "bold",
      "letterSpacing": 0.5,
      "lineHeight": 24,
      "textAlign": "center",
    }
  }
  testID="styled-text"
>
  样式化文本内容
</span>
`;
